--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "mongoose": "^6.0.7",
     "multer": "^1.4.3",
     "nodemailer": "^6.6.5",
-    "nodemailer-sendgrid-transport": "^0.2.0",
-    "uuid": "^8.3.2"
+    "nodemailer-sendgrid-transport": "^0.2.0"
   }
 }
